Bug 255777 - Full screen message shifts up when controls disappear, just before it also disappears ("youtube.com" is in full screen. Swipe down to exit.)
Summary: Full screen message shifts up when controls disappear, just before it also di...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jean-Yves Avenard [:jya]
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-21 04:21 PDT by Jean-Yves Avenard [:jya]
Modified: 2023-04-23 20:26 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Yves Avenard [:jya] 2023-04-21 04:21:27 PDT
- Go to a website that uses requestFullScreen, such as youtube.com
- Active full screen
- Note the message in the center of the screen
- Wait until the message is about to disappear
- Note that the message box moves up just before disappearing
Comment 1 Jean-Yves Avenard [:jya] 2023-04-21 04:21:46 PDT
rdar://106225913
Comment 2 Jean-Yves Avenard [:jya] 2023-04-21 04:27:25 PDT
Pull request: https://github.com/WebKit/WebKit/pull/13023
Comment 3 EWS 2023-04-23 20:26:53 PDT
Committed 263295@main (29adb2b287fb): <https://commits.webkit.org/263295@main>

Reviewed commits have been landed. Closing PR #13023 and removing active labels.