Full screen message shifts up when controls disappear, just before it also disappears https://bugs.webkit.org/show_bug.cgi?id=255777 rdar://106225913

Reviewed by Jer Noble.

We had two animations happening in parallel: hiding the banner and hiding
the UI controls.
Both were set to happen for the same duration but in effect this wasn't
the case.
When the UI controls got hidden, the status bar was set to disappeared
which changed the logical location of the full screen banner and gave the
impression it was shifting up.

Change the anchors of the fullscreen banner to use the one of the parent
view instead.

* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenViewController.mm:
(-[WKFullScreenViewController loadView]):

Canonical link: https://commits.webkit.org/263295@main